more LKJ and testthat

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,10 @@ export(adtest)
 export(invlogit)
 export(lgamma1p)
 export(lgammaexp)
+export(lkj_R)
+export(lkj_chol_logpdf_R)
+export(lkj_const_R)
+export(lkj_unwrap_R)
 export(log1pexp)
 export(log1pmx)
 export(loginvlogit)
