--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,4 +20,5 @@ Suggests:
     testthat,
     numDeriv
 VignetteBuilder: knitr
-SystemRequirements:  C++11
+SystemRequirements: C++11
+RoxygenNote: 5.0.1
