--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(LKJ_const)
 export(LKJ_test)
 export(MVN_test)
 export(adtest)
+export(dgamma_test)
 export(invlogit)
 export(lgamma1p)
 export(lgammaexp)
@@ -20,4 +21,4 @@ import(Matrix)
 import(Rcpp)
 import(RcppEigen)
 import(methods)
-useDynLib(CppADutils)
+useDynLib(CppADutils, .registration=TRUE)
