updated on master branch

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,24 +1,24 @@
 Package: CppADutils
 Title: utils for using CppAD in packages
-Version: 0.0.0.9000
+Version: 0.0.1
 Authors@R: "Michael Braun <braunm@smu.edu> [aut, cre]"
 Description: What the package does (one paragraph)
 Depends:
-    R (>= 3.4.0),
-    Rcpp (>= 0.12.10),
+    R (>= 4.1.0),
+    Rcpp (>= 1.0),
     RcppEigen (>= 0.3.3.3),
     methods,
-    Matrix (>= 1.2.9)
+    Matrix (>= 1.4)
 License: file LICENSE
 LazyData: true
 LinkingTo: Rcpp, RcppEigen
 RcppModules: adtest
-Roxygen: list(wrap=TRUE)
 Suggests:
     knitr,
     plyr,
     testthat,
     numDeriv
+Encoding: UTF-8
 VignetteBuilder: knitr
 SystemRequirements: C++11
-RoxygenNote: 6.0.1
+RoxygenNote: 7.2.1
